Started on the examples and New Features
Now if you use es-active it'll check all children to see if an achor tag has an esref the same as the current url.

--- a/examples/app/includes/main_menu.html
+++ b/examples/app/includes/main_menu.html
@@ -1,5 +1,8 @@
 <ul class="nav navbar-nav">
-	<li>
-		<a es-href="#">Home</a>
+	<li es-active="active">
+		<a esref="/">Home</a>
+	</li>
+	<li es-active="active">
+		<a esref="/includes">Includes</a>
 	</li>
 </ul>
