--- a/examples/app/views/main.html
+++ b/examples/app/views/main.html
@@ -1,1 +1,21 @@
-<h1>This is being pulled from main.html</h1>
+<div class"container">
+	<div class="row">
+		<div class="col-md-12">
+			<h1>
+				Welcome to the Project Espada&trade; examples!
+			</h1>
+			<h2>
+				What is "Project Espada&trade;?"
+			</h2>
+			<p>
+				Project Espada&trade; is a javascript library used to make real-time websites and web applications with a focus on ease of setup and use.
+			</p>
+			<h2>
+				Who makes it?
+			</h2>
+			<p>
+				Ayphix Entertainment LLC&trade;, specifically this a pet project of the lead programmer.
+			</p>
+		</div>
+	</div>
+</div>
