Route changes, View changes, and Includes now all work.

--- a/examples/app/includes/main_menu.html
+++ b/examples/app/includes/main_menu.html
@@ -1,8 +1,4 @@
 <ul class="nav navbar-nav">
-	<li es-active="active">
-		<a esref="/">Home</a>
-	</li>
-	<li es-active="active">
-		<a esref="/includes">Includes</a>
-	</li>
+	<li es-active="active"><a esref="/">Home</a></li>
+	<li es-active="active"><a esref="/includes">Includes</a></li>
 </ul>
